Closed Bug 470835 Opened 17 years ago Closed 17 years ago

crash [@ nsMsgLocalMailFolder::AddMessage]

Categories

(MailNews Core :: Backend, defect)

x86
Windows Vista
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b2

People

(Reporter: wsmwk, Assigned: philor)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

3.0b1 [@ nsMsgLocalMailFolder::AddMessage] I don't find this prior to 2008072418, so citing this as a possible trunk regression all crashes are vista. might be same person but can't tell, so not calling this a topcrash (it's a topcrash by the numbers) bp-ed4953c1-fa89-447d-8aa3-558d82081220 nsMsgLocalMailFolder::AddMessage nsLocalMailFolder.cpp:3786 NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:101 XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2422 XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1477
e.g., the outputFileStream is null? :-)
(In reply to comment #2) > e.g., the outputFileStream is null? :-) Heh. One thing I noticed is that all the crashes are on the Vista SP2 beta. I guess that either it's one person with problems, or there might be something in the SP2 beta that's giving trouble.
Pardon the naive question, but why does that one caller of MsgGetFileStream assume that nothing could possibly go wrong, when the other eight all check the rv?
/me restrains myself from a Goon Show quote :-) but this caller should be fixed. iirc, Myk's blog reader extension called AddMessage at one point, so it's possible that it's an extension that's involved, not the OS.
(In reply to comment #5) > /me restrains myself from a Goon Show quote :-) but this caller should be > fixed. iirc, Myk's blog reader extension called AddMessage at one point, so > it's possible that it's an extension that's involved, not the OS. forumzilla?
Yes, forumzilla - it may not use AddMessage anymore, but iirc, that's why we added AddMessage in the first place.
I just grepped through Forumzilla's codebase and didn't find any reference to AddMessage. And Forumzilla isn't compatible with Thunderbird 3 in any case. But Thunderbird's built-in feed reader uses AddMessage: http://mxr.mozilla.org/mozilla/source/mail/extensions/newsblog/content/FeedItem.js#441
yes, I think that's from when we basically cloned forumzilla into TB 2.0 - but again, I could be remembering incorrectly.
Attached patch Kevlar, v.1Splinter Review
I'm more than willing to believe we're doing something evil in folder creation in feeds code that makes a folder which can't be written to, but I dunno what. Pretty sure wrapping AddMessage in Kevlar so people will file "When I add a feed for foo.com, it never updates and I get this error message" instead of thinking "damn, Tb3 crashes all the time when I'm not doing anything" will get us closer to finding out, though.
Assignee: nobody → philringnalda
Status: NEW → ASSIGNED
Attachment #354271 - Flags: superreview?(bienvenu)
Attachment #354271 - Flags: review?(bienvenu)
Comment on attachment 354271 [details] [diff] [review] Kevlar, v.1 thx, Phil.
Attachment #354271 - Flags: superreview?(bienvenu)
Attachment #354271 - Flags: superreview+
Attachment #354271 - Flags: review?(bienvenu)
Attachment #354271 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b2
Crash Signature: [@ nsMsgLocalMailFolder::AddMessage]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: