Bug 470835 - wrap some Kevlar around calls that might be coming from a dodgy folder, so we don't crash [@ nsMsgLocalMailFolder::AddMessage], r+sr=bienvenu